docs: actualizar README con ejemplos reales de requests y responses